samples/_failures_safe/1761425647_27ece9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_479cb291.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_479cb291.c:135:20: error: expected identifier at end of input
  135 |                    analyzer->entries[i].level, analyzer->
      |                    ^~~~~~~~
./samples/SAFE/__tmp_479cb291.c:135:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_479cb291.c:135:20: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_479cb291.c:135:20: error: expected declaration or statement at end of input
